--- a/bvicm-MERN/day2 - greetApp/index.html
+++ b/bvicm-MERN/day2 - greetApp/index.html
@@ -9,7 +9,8 @@
             color:blue;
         }
     </style>
-    <script src="logic.js"></script>
+    <script src="logic.js" defer></script> 
+    <!-- lazy loading of script, HTML loads first then js loads-->
 </head>
 <body>
  <h1 align="middle">Greet App</h1>
@@ -18,6 +19,7 @@
     <br>
     <label for="lname">Last Name</label><input id="lname" type="text">
     <br>
-    <button onclick="sayWelcome()">Greet</button>&nbsp;<button onclick="clearAll()">Clear All</button>
+    <button id='b1'>Greet</button>&nbsp;<button id='b2'>Clear</button>
+    <!-- <button onclick="sayWelcome()">Greet</button>&nbsp;<button onclick="clearAll()">Clear All</button> -->
 </body>
 </html>
